transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment
  namespace: marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: transaction_service:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: marketplace
spec:
  selector:
    app: transaction-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
