userdb-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-userdb
  namespace: marketplace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-userdb
  template:
    metadata:
      labels:
        app: postgres-userdb
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-userdb-service
  namespace: marketplace
spec:
  selector:
    app: postgres-userdb
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
